--- a/index.html
+++ b/index.html
@@ -54,31 +54,15 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="./img/logo/logo_name_bg_white.png" class="d-block w-100" style="height:500px; object-fit: cover;" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Gambar Slide Yang Pertama</h5>
-                <p>Gambar pemandangan sungai.</p>
-              </div>
             </div>
             <div class="carousel-item">
               <img src="./img/carousel_cottage_0.jpg" class="d-block w-100"  style="height:500px; object-fit: cover;" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Gambar Slide Yang Pertama</h5>
-                <p>Gambar pemandangan sungai.</p>
-              </div>
             </div>
             <div class="carousel-item">
               <img src="./img/carousel_cottage_1.jpg"  style="height:500px; object-fit: cover;" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Gambar Slide Yang Kedua</h5>
-                <p>Gambar pemandangan sawah di desa.</p>
-              </div>
             </div>
             <div class="carousel-item">
               <img src="./img/carousel_cottage_2.jpg"  style="height:500px; object-fit: cover;" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Gambar Slide Yang Ketiga</h5>
-                <p>Gambar pemandangan taman belakang rumah.</p>
-              </div>
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
@@ -104,18 +88,18 @@
         <div class="space"></div>
 
           <div class="para1">
-            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p>
+            <p>Our cottage is located in <b>Palani</b>, a place famous for Palani Murugan Temple or Arulmigu Kulazhandaivelayutha Swamy Temple which is deticated to <b>Lord Murugan. Our cottage is situated close to the Palani Murugan Temple, overlooking the hill.</b></p>
           </div>
           <hr class="divider">
           <div class="wrap">
             <!-- Button trigger modal -->
-            <button type="button" class="button shadow-lg" data-toggle="modal" data-target=".cd-example-modal-lg">View Gallery</button>
+            <button type="button" style="width: 50%" class="button shadow-lg" data-toggle="modal" data-target=".cd-example-modal-lg">View Gallery</button>
             <!-- Modal -->
             <div class="modal fade cd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
               <div class="modal-dialog modal-lg">
                 <div class="modal-content"> 
                   <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Gallery</h5>
+                    <h5 class="modal-title" id="exampleModalLongTitle"><center style="color:#4e413b ;"><b>GALLERY</b></center></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -124,43 +108,43 @@
                     <div class="container">
                       <div class="row text-center text-lg-left">
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
-                                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="">
+                          <a href="./img/cottage_interior_0.jpg" class="d-block mb-4 h-100">
+                                <img class="img-fluid img-thumbnail" src="./img/cottage_interior_0.jpg" alt="">
                               </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
-                                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/aob0ukAYfuI/400x300" alt="">
+                          <a href="./img/cottage_interior_1.jpg" class="d-block mb-4 h-100">
+                                <img class="img-fluid img-thumbnail" src="./img/cottage_interior_1.jpg" alt="">
                               </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
-                                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/EUfxH-pze7s/400x300" alt="">
+                          <a href="./img/cottage_interior_2.jpg" class="d-block mb-4 h-100">
+                                <img class="img-fluid img-thumbnail" src="./img/cottage_interior_2.jpg" alt="">
                               </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
-                                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/M185_qYH8vg/400x300" alt="">
+                          <a href="./img/cottage_interior_3.jpg" class="d-block mb-4 h-100">
+                                <img class="img-fluid img-thumbnail" src="./img/cottage_interior_3.jpg" alt="">
                               </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
-                                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/sesveuG_rNo/400x300" alt="">
+                          <a href="./img/cottage_interior_4.jpg" class="d-block mb-4 h-100">
+                                <img class="img-fluid img-thumbnail" src="./img/cottage_interior_4.jpg" alt="">
                               </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
-                                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/AvhMzHwiE_0/400x300" alt="">
+                          <a href="./img/cottage_interior_5.jpg" class="d-block mb-4 h-100">
+                                <img class="img-fluid img-thumbnail" src="./img/cottage_interior_5.jpg" alt="">
                               </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
-                                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/2gYsZUmockw/400x300" alt="">
+                          <a href="./img/cottage_interior_6.jpg" class="d-block mb-4 h-100">
+                                <img class="img-fluid img-thumbnail" src="./img/cottage_interior_6.jpg" alt="">
                               </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
-                                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/EMSDtjVHdQ8/400x300" alt="">
+                          <a href="./img/cottage_interior_7.jpg" class="d-block mb-4 h-100">
+                                <img class="img-fluid img-thumbnail" src="./img/cottage_interior_7.jpg" alt="">
                               </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
@@ -196,14 +180,14 @@
           <div class="space"></div>
 
           <section>
-            <h1>SEND US A MESSAGE</h1>
+            <h3><b>FOR BOOKINGS</b></h3>
             <form class="cf">
               <div class="half left cf">
                 <input class="shadow-lg" type="text" id="input-name" placeholder="Enter Your Name">
                 <input class="shadow-lg"  id="input-number" placeholder="Enter Your Phone number">
               </div>
               <div class="half right cf">
-                <textarea class="shadow-lg" name="message" type="text" id="input-message" placeholder="Enter Your Address"></textarea>
+                <textarea class="shadow-lg" name="message" type="text" id="input-message" placeholder="Enter if there are any additional messages"></textarea>
               </div>  
               <input type="submit" value="SEND" id="input-submit">
             </form>
