--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
           <div class="col-xs-12 col-md-6 col-sm-6 social-section">
             <div class="text-center">
-              <h4 class="text-center">Ammenties</h4>
+              <h4 class="text-center">Amenties</h4>
           <div class="text-center social-buttons">
               <a href="#" class="btn btn-default btn-lg social-button link-facebook"><i class="fa fa-snowflake"></i>
               </a>
