--- a/index.html
+++ b/index.html
@@ -258,15 +258,15 @@
               <a href="#" class="btn btn-default btn-lg social-button link-facebook"><i class="fa fa-snowflake"></i>
               </a>
   
-              <a href="https://codepen.io/simplysuvi/" class="btn btn-default btn-lg social-button link-codepen"><i class="fa fa-bed"></i>
+              <a href="#" class="btn btn-default btn-lg social-button link-codepen"><i class="fa fa-bed"></i>
               </a>
   
               <a href="#" class="btn btn-default btn-lg social-button link-twitter"><i class="fa fa-car"></i>
               </a>
   
-              <a href="https://www.linkedin.com/in/suvijainhere" class="btn btn-default btn-lg social-button link-linkedin"><i class="fa fa-tv"></i>
+              <a href="#" class="btn btn-default btn-lg social-button link-linkedin"><i class="fa fa-tv"></i>
               </a>
-            <a href="https://instagram.com/simplysuvi" class="btn btn-default btn-lg social-button link-instagram"><i class="fa fa-plug"></i>
+            <a href="#" class="btn btn-default btn-lg social-button link-instagram"><i class="fa fa-plug"></i>
               </a>
             </div>
             </div>
