--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
               <img src="./img/logo/logo_name_bg_white.png" class="d-block w-100" style="height:500px; object-fit: cover;" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="./img/carousel_cottage_0.jpg" class="d-block w-100"  style="height:500px; object-fit: cover;" alt="...">
+              <img src="./img/cottage_0.jpg" class="d-block w-100"  style="height:650px; object-fit: scale-down;" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="./img/carousel_cottage_1.jpg"  style="height:500px; object-fit: cover;" class="d-block w-100" alt="...">
+              <img src="./img/cottage_1.jpg"  style="height:650px; object-fit: scale-down;" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="./img/carousel_cottage_2.jpg"  style="height:500px; object-fit: cover;" class="d-block w-100" alt="...">
+              <img src="./img/cottage_3.jpg"  style="height:650px; object-fit: scale-down;" class="d-block w-100" alt="...">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
@@ -169,6 +169,7 @@
               <div class="half right cf">
                 <textarea class="shadow-lg" name="message" type="text" id="input-message" placeholder="Enter if there are any additional messages"></textarea>
               </div>  
+              <input type="date">
               <input type="submit" value="SEND" id="input-submit">
             </form>
           </section>
