Welcome para updated

--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
           <div class="space"></div>
 
             <div class="para1">
-              <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p>
+              <p>Our cottage is located in <b>Palani</b>, a place famous for Palani Murugan Temple or Arulmigu Kulazhandaivelayutha
+                Swamy Temple which is deticated to <b>Lord Murugan. Our cottage is situated close to the Palani Murugan Temple,
+                  overlooking the hill.</b></p>
             </div>
             <hr class="divider">
         </section>
