--- a/index.html
+++ b/index.html
@@ -53,20 +53,16 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="./img/logo/logo_name_bg_white.png" class="d-block w-100" style="height:500px; object-fit: cover;" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Gambar Slide Yang Pertama</h5>
-                <p>Gambar pemandangan sungai.</p>
-              </div>
+              <img src="./img/logo/logo_name_bg_white.png" class="d-block w-100" style="padding-top: 60px; object-fit: contain;" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="./img/cottage_0.jpg" class="d-block w-100"  style="height:650px; object-fit: scale-down;" alt="...">
+              <img src="./img/cottage_0.jpg" class="d-block w-100"  style="padding-top: 60px; object-fit: contain;" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="./img/cottage_1.jpg"  style="height:650px; object-fit: scale-down;" class="d-block w-100" alt="...">
+              <img src="./img/cottage_1.jpg"  style="padding-top: 60px; object-fit: contain;" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="./img/cottage_3.jpg"  style="height:650px; object-fit: scale-down;" class="d-block w-100" alt="...">
+              <img src="./img/cottage_3.jpg"  style="padding-top: 60px; object-fit: contain;" class="d-block w-100" alt="...">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
@@ -101,7 +97,72 @@
             </div>
             <hr class="divider">
         </section>
+        <center>
+          <div class="container">
+            <div class="row">
+              <div class="col-sm m-50">
+                <div class="card">
+                  <img class="card-img-top" src="./img/card_double_bed_ac.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title"><b>Double Bed - A/C</b></h5>
+                    <p class="card-text">
+                      <h3 class="text-success"><b>₹ 1050 <i class="fa fa-tag"></i></b></h3>
+                      <p class="text-success">30% OFF</p>
+                      <h4 class="text-danger"><s>₹ 1500 </s></h4>
+                    </p>
+                    <a href="" style="margin-top:50px" class="btn btn-success"><b>BOOK NOW</b></a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm m-50">
+                <div class="card">
+                  <img class="card-img-top" src="./img/card_single_bed_ac.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title"><b>Single Bed - A/C</b></h5>
+                    <p class="card-text">
+                      <h3 class="text-success"><b>₹ 840 <i class="fa fa-tag"></i></b></h3>
+                      <p class="text-success">30% OFF</p>
+                      <h4 class="text-danger"><s>₹ 1200 </s></h4>
+                    </p>
+                    <a href="" style="margin-top:50px" class="btn btn-success"><b>BOOK NOW</b></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm m-50">
+                <div class="card">
+                  <img class="card-img-top" src="./img/card_double_bed_non_ac.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title"><b>Double Bed - Non A/C</b></h5>
+                    <p class="card-text">
+                      <h3 class="text-success"><b>₹ 630 <i class="fa fa-tag"></i></b></h3>
+                      <p class="text-success">30% OFF</p>
+                      <h4 class="text-danger"><s>₹ 900 </s></h4>
+                    </p>
+                    <a href="" style="margin-top:50px" class="btn btn-success"><b>BOOK NOW</b></a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm m-50">
+                <div class="card">
+                  <img class="card-img-top" src="./img/card_single_bed_non_ac.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title"><b>Single Bed - Non A/C</b></h5>
+                    <p class="card-text">
+                      <h3 class="text-success"><b>₹ 455 <i class="fa fa-tag"></i></b></h3>
+                      <p class="text-success">30% OFF</p>
+                      <h4 class="text-danger"><s>₹ 650 </s></h4>
+                    </p>
+                    <a href="" style="margin-top:50px" class="btn btn-success"><b>BOOK NOW</b></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </center>
           <div class="wrap">
+            
             <!-- Button trigger modal -->
             <button type="button" class="button shadow-lg" data-toggle="modal" data-target=".cd-example-modal-lg">View Gallery</button>
             <!-- Modal -->
@@ -118,63 +179,63 @@
                     <div class="container">
                       <div class="row text-center text-lg-left">
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
-                                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/pWkk7iiCoDM/400x300" alt="">
+                          <a href="./img/cottage_interior_0.jpg" class="d-block mb-4 h-100">
+                                <img class="img-fluid img-thumbnail" src="./img/cottage_interior_0.jpg" alt="">
                               </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
-                                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/aob0ukAYfuI/400x300" alt="">
+                          <a href="./img/cottage_interior_1.jpg" class="d-block mb-4 h-100">
+                                <img class="img-fluid img-thumbnail" src="./img/cottage_interior_1.jpg" alt="">
                               </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
-                                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/EUfxH-pze7s/400x300" alt="">
+                          <a href="./img/cottage_interior_2.jpg" class="d-block mb-4 h-100">
+                                <img class="img-fluid img-thumbnail" src="./img/cottage_interior_2.jpg" alt="">
                               </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
-                                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/M185_qYH8vg/400x300" alt="">
+                          <a href="./img/cottage_interior_3.jpg" class="d-block mb-4 h-100">
+                                <img class="img-fluid img-thumbnail" src="./img/cottage_interior_3.jpg" alt="">
                               </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
-                                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/sesveuG_rNo/400x300" alt="">
+                          <a href="./img/cottage_interior_4.jpg" class="d-block mb-4 h-100">
+                                <img class="img-fluid img-thumbnail" src="./img/cottage_interior_4.jpg" alt="">
                               </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
-                                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/AvhMzHwiE_0/400x300" alt="">
+                          <a href="./img/cottage_interior_5.jpg" class="d-block mb-4 h-100">
+                                <img class="img-fluid img-thumbnail" src="./img/cottage_interior_5.jpg" alt="">
                               </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
-                                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/2gYsZUmockw/400x300" alt="">
+                          <a href="./img/cottage_interior_6.jpg" class="d-block mb-4 h-100">
+                                <img class="img-fluid img-thumbnail" src="./img/cottage_interior_6.jpg" alt="">
                               </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
-                                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/EMSDtjVHdQ8/400x300" alt="">
+                          <a href="./img/cottage_interior_7.jpg" class="d-block mb-4 h-100">
+                                <img class="img-fluid img-thumbnail" src="./img/cottage_interior_7.jpg" alt="">
                               </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
-                                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/8mUEy0ABdNE/400x300" alt="">
+                          <a href="./img/card_double_bed_ac.jpg" class="d-block mb-4 h-100">
+                                <img class="img-fluid img-thumbnail" src="./img/card_double_bed_ac.jpg" alt="">
                               </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
-                                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/G9Rfc1qccH4/400x300" alt="">
+                          <a href="./img/card_single_bed_ac.jpg" class="d-block mb-4 h-100">
+                                <img class="img-fluid img-thumbnail" src="./img/card_single_bed_ac.jpg" alt="">
                               </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
-                                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/aJeH0KcFkuc/400x300" alt="">
+                          <a href="./img/card_double_bed_non_ac.jpg" class="d-block mb-4 h-100">
+                                <img class="img-fluid img-thumbnail" src="./img/card_double_bed_non_ac.jpg" alt="">
                               </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
-                                <img class="img-fluid img-thumbnail" src="https://source.unsplash.com/p2TQ-3Bh3Oo/400x300" alt="">
+                          <a href="./img/card_single_bed_non_ac.jpg" class="d-block mb-4 h-100">
+                                <img class="img-fluid img-thumbnail" src="./img/card_single_bed_non_ac.jpg" alt="">
                               </a>
                         </div>
                       </div>
@@ -190,7 +251,7 @@
           <div class="space"></div>
 
           <section>
-            <h1>SEND US A MESSAGE</h1>
+            <h1><b>SEND US A MESSAGE</b></h1>
             <form class="cf">
               <div class="half left cf">
                 <input class="shadow-lg" type="text" id="input-name" placeholder="Enter Your Name">
