--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
       </div>
       <div class="space"></div>
       <div class="space">
-        <center><i class="fa fa-chevron-circle-down" style="font-size:70px ;color: orange"></i></center>
+
+        <center><a href="#about"><i class="fa fa-chevron-circle-down" style="font-size:70px ;color: orange"></i></a></center>
       </div>
             <section id="about">
 
@@ -293,23 +294,21 @@
           </div>
 
           <div class="col-xs-12 col-md-6 col-sm-6 social-section">
-            <div class="text-center">
-              <h4 class="text-center">Amenties</h4>
-          <div class="text-center social-buttons">
-              <a href="#" class="btn btn-default btn-lg social-button link-facebook"><i class="fa fa-snowflake"></i>
-              </a>
-  
-              <a href="#" class="btn btn-default btn-lg social-button link-codepen"><i class="fa fa-bed"></i>
-              </a>
-  
-              <a href="#" class="btn btn-default btn-lg social-button link-twitter"><i class="fa fa-car"></i>
-              </a>
-  
-              <a href="#" class="btn btn-default btn-lg social-button link-linkedin"><i class="fa fa-tv"></i>
-              </a>
-            <a href="#" class="btn btn-default btn-lg social-button link-instagram"><i class="fa fa-plug"></i>
-              </a>
-            </div>
+            <!-- <div class="text-center">
+              <form class="contact cf">
+                <div class=" left cf-1">
+                    <b>Your Contact Number</b> 
+                    <input type="number" id="check-in" placeholder="Phone number (10 digit)" min="5000000000" max="9999999999"><button><i class="fa fa-paper-plane-o"></i></button>
+                </div>
+            </form>          
+            </div> -->
+            <div>
+              <h5>Get In Touch</h5>
+                <form class="contact">
+                  <input type="number" name="news-email" id="news-email" placeholder="Contact Number...">
+                  <button class="btn btn-default btn-primary" style="margin-top: 10px;"><i class="fa fa-paper-plane"></i> Send</button>
+                </form>
+              </div>
             </div>
           </div>
 
