--- a/rooms/single_bed_non_ac.html
+++ b/rooms/single_bed_non_ac.html
@@ -14,7 +14,7 @@
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="../favicon.ico" rel="icon" type="image/x-icon" />
 
 
     <title>Goldvel Cottage</title>
@@ -44,9 +44,56 @@
 
         </div>
     </div>
-    <!-- content here -->
+<!-- content here -->
+<div class="container pt-100">
+    <div class="row">
+        <div class="col-sm">
+            <center>
+            <img src="./../img/card_single_bed_non_ac.jpg" style="width:90%; height:400px; object-fit:cover; border-radius: 8px; border: 5px solid #ddd; box-shadow: 0px 1px 8px 0px #888888;">
+    <hr>
+    <div class="text-center">
+        <h4 class="text-center">Amenties</h4>
+    <div class="text-center social-buttons">
+        <!-- <a href="#" class="btn btn-default btn-lg social-button link-facebook"><i class="fa fa-snowflake"></i>
+        </a> -->
 
-    <!-- !!!!!!!!!!!! -->
+        <a href="#" class="btn btn-default btn-lg social-button link-codepen"><i class="fa fa-bed"></i>
+        </a>
+
+        <a href="#" class="btn btn-default btn-lg social-button link-twitter"><i class="fa fa-wifi"></i>
+        </a>
+
+        <a href="#" class="btn btn-default btn-lg social-button link-linkedin"><i class="fa fa-tv"></i>
+        </a>
+      <a href="#" class="btn btn-default btn-lg social-button link-instagram"><i class="fa fa-plug"></i>
+        </a>
+        <a href="#" class="btn btn-default btn-lg social-button link-cutlery"><i class="fa fa-cutlery"></i>
+        </a>
+      </div>
+      </div>
+
+            </center>
+        </div>
+        <div class="col-sm left-v-line pt-25">
+                <h2 class="dark-text"><b>Single Bed - Non A/C</b></h2>
+                <h3 class="text-success pt-50"><b>₹ 455 <i class="fa fa-tag"></i></b></h3>
+                <p class="text-success">30% OFF</p>
+                <h4 class="text-danger"><s>₹ 650 </s></h4>
+
+                <div class="space"></div>
+
+                <form class="cf">
+                    <div class=" left cf">
+                        <b class="text-warning">Your contact number:</b> 
+                        <input type="number" id="check-in" placeholder="Phone number (10 digit)" min="5000000000" max="9999999999">
+                    </div>
+                <input type="submit" value="BOOK" class="text-success pt-25">
+                <small class="text-muted"><i>(We will contact you as soon as we receive your contact details)</i></small>
+                </form>
+        </div>
+    </div>
+</div>
+<!-- !!!!!!!!!!!! -->
     <script type="text/javascript" src="../main.js"></script>
     <!-- Optional JavaScript -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
